# context-library

./: .claude_prompt_0455297c-648f-45cc-bc74-b489d1f340b5.txt  .claude_prompt_09757e07-c702-490b-ac80-e1fbd93c43ea.txt  .claude_prompt_127cad2e-8f70-4b8f-bac4-2c5e336148e3.txt  .claude_prompt_14ea6584-5066-41e1-909c-8dbbfdd3b3ff.txt  .claude_prompt_15a75b5e-f5c4-4726-87e4-b33a4d51dbca.txt  .claude_prompt_15affbbb-873d-4cb3-888a-062a9aead939.txt  .claude_prompt_18425721-e3bc-4109-8107-84ad05cd5d67.txt  .claude_prompt_1d27292f-7dc1-452a-8f7a-ac75e48cd7a3.txt  .claude_prompt_203bfa90-849b-4e17-8ac2-44c6f0570682.txt  .claude_prompt_21c08d60-d24f-48f5-a43e-8e557a54ad45.txt  .claude_prompt_243852cc-c954-4ca0-ae92-738e41e9705f.txt  .claude_prompt_27ff3ef1-9e01-4c2e-9a59-2cdd1e6b739c.txt  .claude_prompt_2f833b2e-11e8-43c0-836f-a9c07ba61765.txt  .claude_prompt_31650747-fdd3-4e0e-8923-e85093475976.txt  .claude_prompt_376758e0-3141-4242-a94e-e9b8e34c0ec1.txt  .claude_prompt_43b42633-19a1-48aa-b677-0c32b06e01a9.txt  .claude_prompt_47118f50-43ca-4e10-bcf6-bf949082c773.txt  .claude_prompt_47fdac81-c950-4842-bacf-cc442dba874b.txt  .claude_prompt_4b96871c-47bb-4aee-8502-411b63d66218.txt  .claude_prompt_4ee66d81-8a8a-49c9-963b-97d110dea0a2.txt  .claude_prompt_54932942-108c-492b-992b-8ed32f6bf09e.txt  .claude_prompt_559cd4b5-6f26-4aaa-8a36-003c49d39548.txt  .claude_prompt_5e9f229e-fbcc-4204-a6ab-99837a467ab8.txt  .claude_prompt_60b36412-a91b-4c6d-b063-400a076e1a7d.txt  .claude_prompt_71ec23ae-bcbe-4ca8-8738-524f1935a158.txt  .claude_prompt_721f7c43-8de9-40db-b43d-be892ed20278.txt  .claude_prompt_75cf5a76-52b1-4e44-8f9b-b84cc766febd.txt  .claude_prompt_765a600e-5f9d-4c8c-af3c-b1b489a801d8.txt  .claude_prompt_7685db94-6056-4800-9b72-84907edae10a.txt  .claude_prompt_779d3a2a-f2dc-4d2d-bb66-a486b08938d3.txt  .claude_prompt_77d14f6f-59a3-4187-8ba2-b07172d27925.txt  .claude_prompt_7827c0dd-24c1-4386-9910-cc014d78ca8a.txt  .claude_prompt_79d688ff-707e-493a-89ff-3ff0aa60da74.txt  .claude_prompt_8077a3a1-2a67-4ab1-bac3-a8c9641b9705.txt  .claude_prompt_8aac84eb-e9c1-48ee-9d92-a7f0148fbb66.txt  .claude_prompt_8d7ad5de-0801-49e0-b293-a6d6092c7b6c.txt  .claude_prompt_90b2a203-9ea8-41c6-ac5a-703b0f497381.txt  .claude_prompt_9154b5ba-7cc0-4f35-a70c-80f0eab69c6a.txt  .claude_prompt_9563e00b-f3fe-47b7-bfaf-31b09ac06233.txt  .claude_prompt_9dc4e7ff-87a0-4640-bcba-7a1009da1474.txt  (+36 more)
.playwright-mcp/: page-2026-04-08T16-47-04-814Z.yml
documentation/: Architecture.md  CONFIG_SCHEMA.md  CROSS_REFERENCES.md  chunking-strategy.md  persistence-design.md  roadmap.md  security-deployment.md  ux_refresh.md  youtube-adapter-design.md
examples/: _service_base.py  adapters.yaml  apple_health_service.py  apple_reminders_service.py  obsidian_service.py
src/context_library/adapters/: SERVE_ADAPTER_GUIDE.md  __init__.py  _watching.py  apple_browser_history.py  apple_calendar.py  apple_contacts.py  apple_health.py  apple_imessage.py  apple_location.py  apple_music.py  apple_music_base.py  apple_music_library.py  apple_notes.py  apple_podcasts.py  apple_reminders.py  apple_screentime.py  base.py  caldav.py  email.py  filesystem.py  filesystem_helper.py  filesystem_rich.py  obsidian.py  obsidian_helper.py  obsidian_tasks.py  oura.py  remote.py  serve.py  vcard.py  youtube_transcripts.py  youtube_watch_history.py
src/context_library/config/: __init__.py  loader.py  models.py
src/context_library/core/: chunker.py  differ.py  embedder.py  entity_linker.py  exceptions.py  identifier_normalizer.py  pipeline.py  versioner.py
src/context_library/domains/: __init__.py  base.py  documents.py  events.py  health.py  location.py  messages.py  notes.py  people.py  registry.py  tasks.py
src/context_library/retrieval/: __init__.py  provenance.py  query.py  reranker.py
src/context_library/scheduler/: exceptions.py  poller.py  watcher.py
src/context_library/server/: app.py  auth.py  config.py  helper_health.py  schemas.py  telemetry.py  webhook_adapter.py
tests/: conftest.py  helpers.py  test_telemetry.py
tests/adapters/: conftest.py  test_apple_browser_history.py  test_apple_calendar.py  test_apple_contacts.py  test_apple_health.py  test_apple_imessage.py  test_apple_location.py  test_apple_music.py  test_apple_music_library.py  test_apple_notes.py  test_apple_podcasts.py  test_apple_reminders.py  test_apple_screentime.py  test_base.py  test_caldav.py  test_email.py  test_filesystem.py  test_filesystem_helper.py  test_filesystem_rich.py  test_obsidian.py  test_obsidian_helper.py  test_obsidian_tasks.py  test_oura.py  test_remote.py  test_serve.py  test_vcard.py  test_watching.py  test_youtube_transcripts.py  test_youtube_watch_history.py
tests/config/: __init__.py  test_loader.py  test_models.py
tests/core/: conftest.py  test_chunker.py  test_differ.py  test_embedder.py  test_entity_linker.py  test_health_integration.py  test_identifier_normalizer.py  test_pipeline.py  test_pipeline_filesystem_tombstone.py  test_versioner.py
tests/domains/: conftest.py  test_base.py  test_documents.py  test_events.py  test_health.py  test_location.py  test_messages.py  test_notes.py  test_people.py  test_registry.py  test_tasks.py
tests/fixtures/: expected_diff.py  sample_initial.md  sample_modified.md
tests/integration/: test_people_integration.py
tests/retrieval/: test_provenance.py  test_query.py  test_reranker.py
tests/scheduler/: test_poller.py  test_watcher.py
tests/server/: conftest.py  test_activity_and_pipelines.py  test_adapters.py  test_chunks.py  test_health.py  test_ingest.py  test_lifespan.py  test_retrieve.py  test_source_prefix_filter.py  test_sources.py  test_spa_routing.py  test_stats.py
tests/storage/: test_cross_refs.py  test_document_store.py  test_models.py  test_schema.py  test_validators.py  test_vector_store.py
ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/assets/: library.pen
ui/design/: Context Library Refresh.html  Custom Component Audit.html  app.css
ui/src/: App.tsx  index.css  main.tsx  router.ts  router.tsx  routes-config.ts  routes.ts
(+189 files in other folders)
