[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-library"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "lancedb>=0.29",
    "sentence-transformers>=5.0",
    "mistune>=3.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
email = ["httpx", "html2text"]
gmail = ["google-api-python-client", "google-auth-oauthlib"]
spotify = ["spotipy"]
todoist = ["todoist-api-python"]
rich-fs = ["markitdown", "watchdog"]
obsidian = ["obsidiantools", "python-frontmatter", "PyYAML", "watchdog"]
caldav = ["caldav", "icalendar"]
apple-reminders = ["httpx"]
apple-health = ["httpx"]
dev = ["ruff", "mypy", "pytest", "types-PyYAML", "watchdog", "watchfiles"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "lancedb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "obsidiantools.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "frontmatter"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "caldav.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "icalendar.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/context_library"]
