[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-library"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.0",
    "sentence-transformers>=5.0",
    "mistune>=3.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
lancedb = ["lancedb>=0.29", "pyarrow"]
email = ["httpx", "html2text"]
gmail = ["google-api-python-client", "google-auth-oauthlib"]
spotify = ["spotipy"]
todoist = ["todoist-api-python"]
rich-fs = ["markitdown", "watchdog"]
obsidian = ["obsidiantools", "python-frontmatter", "PyYAML", "watchdog"]
caldav = ["caldav", "icalendar"]
apple-reminders = ["httpx"]
apple-contacts = ["httpx"]
apple-health = ["httpx"]
apple-imessage = ["httpx"]
apple-notes = ["httpx"]
apple-music = ["httpx"]
oura = ["httpx"]
filesystem-helper = ["httpx"]
obsidian-helper   = ["httpx"]
vcard = ["vobject"]
server = ["fastapi>=0.100", "uvicorn[standard]", "pydantic-settings>=2.0"]
dev = ["ruff", "mypy", "pytest", "types-PyYAML", "watchdog", "watchfiles"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "chromadb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lancedb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "obsidiantools.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "frontmatter"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "caldav.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "icalendar.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic_settings"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic_settings.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "vobject"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "vobject.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "requires_fs_watch: marks tests that require active filesystem watching (may be skipped if inotify resources are exhausted)",
]

[tool.hatch.build.targets.wheel]
packages = ["src/context_library"]
